# geometry-central

./: CMakeLists.txt  package.xml
cmake/: geometry-central-config.cmake.in
include/geometrycentral/surface/: heat_method_distance.h  mesh_ray_tracer.h
src/: CMakeLists.txt
src/surface/: heat_method_distance.cpp
