<?xml version="1.0"?>
<package format="3">
  <name>geometry-central</name>
  <version>0.1.0</version>
  <description>adsfad</description>
  <maintainer email="asdf@gmail.com">adsfa</maintainer>
  <license>MIT</license>
  <author>Nick Sharp</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>suitesparse</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
